# mal

./: .gitignore  Dockerfile  Makefile  README.md  pyproject.toml  requirements.txt
.github/workflows/: cd.yml  ci.yml
infra/: main.tf  outputs.tf  variables.tf
scripts/: build_layers.sh  build_zip.sh  publish_artifact.sh
src/: app.py  data_ingestion.py  handler.py  lambda_function.py  model.py  preprocessing.py  train.py  tuning.py
src/ml_service/: aggregate.py  config.py  data_fetcher.py  handler.py  predictor.py  preprocessing.py  train.py
tests/: test_fit_predict.py  test_predictor.py  test_preprocessor.py
