[tool.poetry]
name = "greenhouse-ml-service"
version = "0.1.0"
description = "Stateless AWS Lambda for greenhouse ML"
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = "^3.11"
boto3 = "*"
pandas = "*"
numpy = "*"
scikit-learn = "*"
joblib = "*"

[tool.poetry.dev-dependencies]
pytest = "*"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"